--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,30 @@
 /* * {
   border: 1px solid red;
 } */
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* handle */
+::-webkit-scrollbar-thumb {
+  background: #9ca3af; /* gray-400 */
+  border-radius: 100px;
+}
+
+/* handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #9ca3af; /* gray-500 */
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #9ca3af transparent;
+}
