--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,24 @@
   border: 1px solid red;
 } */
 
-html {
+/* html {
   scroll-behavior: smooth;
+} */
+
+/* .lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+} */
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+/* .lenis.lenis-stopped {
+  overflow: hidden;
+} */
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
 }
 
 /* width */
