--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,3 +69,15 @@
   box-shadow: none !important;
   border: none !important;
 }
+
+@layer utilities {
+  .no-spinner::-webkit-outer-spin-button,
+  .no-spinner::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  .no-spinner {
+    -moz-appearance: textfield;
+  }
+}
